--- a/portfolio-new/package.json
+++ b/portfolio-new/package.json
@@ -13,7 +13,8 @@
     "flowbite-react": "^0.7.2",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
